# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.36.8
	Martin Väth <martin at mvath.de>:
	- manpage: fix typo UPDATE_TO_HIGHEST_SLOT -> UPGRADE_TO_HIGHEST_SLOT

*eix-0.36.7
	Martin Väth <martin at mvath.de>:
	- Support --regex-case and prefer it over --regex if the pattern has
	  uppercase characters, see https://github.com/vaeth/eix/issues/110

*eix-0.36.6
	Martin Väth <martin at mvath.de>:
	- Support *.gpkg.tar (BINPKG_FORMAT=gpkg), see
	  https://github.com/vaeth/eix/issues/104
	- Let eix-layman without arguments display the help text

*eix-0.36.5
	Martin Väth <martin at mvath.de>:
	- Do not print SRC_URI of installed versions - this is always empty

*eix-0.36.4
	Martin Väth <martin at mvath.de>:
	- meson: All occurrences of run_command get a check argument
	- meson: Add default cpp_eh=none cpp_rtti=false
	- meson: Ignore en@quot and en@boldquot unless po files do exist

*eix-0.36.3
	Martin Väth <martin at mvath.de>:
	- Bugfix: Make nonexistent in package.nowarn work as documented.
	  Previously, it worked only work if
	  NONEXISTENT_IF_{MASKED,OTHER_OVERLAY} are both false or disabled in
	  package.nowarn for the package as well.

*eix-0.36.2
	Martin Väth <martin at mvath.de>:
	- Fix compile errors in the absence of std::unordered_set, see
	  https://bugs.gentoo.org/838358

*eix-0.36.1
	Jannik Glückert <https://github.com/Jannik2099>:
	- Remove unsupported ATTRIBUTE_SIGNAL

*eix-0.36.0
	Martin Väth <martin at mvath.de>:
	- New EBUILD_PORTAGE3_0_24 with default true.
	  If true, cache method ebuild* will assume >=sys-apps/portage-3.0.24,
	  and cache method ebuild will actually be equivalent to ebuild*.
	  See https://bugs.gentoo.org/815216

*eix-0.35.3
	Martin Väth <martin at mvath.de>:
	- Sets can also be in subdirectories: The name is the full subpath

	Florian Schmaus <flo at geekplace.eu>:
	- Work if there is no $HOME variable

*eix-0.35.2
	Martin Väth <martin at mvath.de>:
	- Fix segfault when reading dependencies of installed versions