@@ -4,6 +4,9 @@
 	Martin Väth <martin at mvath.de>:
 	- manpage: fix typo UPDATE_TO_HIGHEST_SLOT -> UPGRADE_TO_HIGHEST_SLOT
 
+	Alexis <flexibeast at gmail.com>:
+	- manpage: clarify purpose of eix-remote and of options -R and -Z
+
 *eix-0.36.7
 	Martin Väth <martin at mvath.de>:
 	- Support --regex-case and prefer it over --regex if the pattern has
